--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
-python: 2.7
-env:
-    - TOX_ENV=py27
-    - TOX_ENV=py33
-    - TOX_ENV=py34
-
-script: tox -e $TOX_ENV
+python:
+    - "2.7"
+    - "3.4"
+    - "3.5"
 
 install:
-    - pip install tox
+    - pip install -r requirements.txt
+    - python setup.py -q install
+
+script:
+    - py.test
