--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: python
 python:
-    - "2.7"
-    - "3.4"
-    - "3.5"
+  - "2.7"
+  - "3.4"
+  - "3.5"
 
 install:
-    - pip install -r requirements.txt
-    - python setup.py -q install
+  - pip install -r requirements.txt
+  - python setup.py -q install
 
 script:
-    - py.test
+  - py.test
+
+notifications:
+  email:
+    - guangyizhang.jan@gmail.com
